[package]
name = "new_york_utils"
version = "0.1.0"
edition = "2021"
authors = ["Andrey Makarov <viva.la.akam@gmail.com>"]
description = "Library for calculation some things"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
